[package]
name = "alfred_tmux_workflow"
version = "0.1.0"
authors = ["Guoliang Cao <gcao99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.1"

[[bin]]
name = "test"
path = "src/test.rs"
doc = false